--- a/personal-site/public/index.html
+++ b/personal-site/public/index.html
@@ -7,8 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Portfolio of Mmeli Gabriel Dyantyi - Web Developer & Creative Technologist"
+      content="Mmeli Gabriel Dyantyi - Freelance Fullstack Developer South Africa specializing in web & mobile apps, AI integration, MS Power Platform automation, software redesign, and digital marketing for businesses and startups."
     />
+    <meta name="keywords" content="freelance fullstack developer South Africa, PowerApps consultant Johannesburg, AI integration for small businesses, digital solutions for startups, software redesign and automation services, web app development, mobile app development, Microsoft Power Platform, business transformation, tech innovation, digital marketing strategy" />
+    <meta name="author" content="Mmeli Gabriel Dyantyi" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="geo.region" content="ZA-GP" />
+    <meta name="geo.placename" content="Johannesburg, South Africa" />
+    <meta name="geo.position" content="-26.2041;28.0473" />
+    <meta name="ICBM" content="-26.2041, 28.0473" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,8 +32,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Mmeli Gabriel Dyantyi | Portfolio</title>
-    <link rel="canonical" href="https://yourdomain.com/page-url/">
+    <title>Mmeli Gabriel Dyantyi | Freelance Fullstack Developer South Africa</title>
+    <link rel="canonical" href="https://personal-site-zeta-silk.vercel.app/">
     <link rel="icon" href="%PUBLIC_URL%/msgwebworks-logo1.png" type="image/png">
     <script src="https://kit.fontawesome.com/a2e0e6ad6b.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
@@ -38,17 +46,94 @@
         scroll-behavior: smooth;
       }
     </style>
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://personal-site-zeta-silk.vercel.app/" />
+    <meta property="og:title" content="Mmeli Gabriel Dyantyi | Freelance Fullstack Developer South Africa" />
+    <meta property="og:description" content="Freelance Fullstack Developer South Africa specializing in web & mobile apps, AI integration, MS Power Platform automation, software redesign, and digital marketing for businesses and startups." />
+    <meta property="og:image" content="https://personal-site-zeta-silk.vercel.app/msgwebworks-logo1.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://personal-site-zeta-silk.vercel.app/" />
+    <meta property="twitter:title" content="Mmeli Gabriel Dyantyi | Freelance Fullstack Developer South Africa" />
+    <meta property="twitter:description" content="Freelance Fullstack Developer South Africa specializing in web & mobile apps, AI integration, MS Power Platform automation, software redesign, and digital marketing for businesses and startups." />
+    <meta property="twitter:image" content="https://personal-site-zeta-silk.vercel.app/msgwebworks-logo1.png" />
+
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Person",
-      "name": "Mmela Gabriel Dyantyi",
+      "name": "Mmeli Gabriel Dyantyi",
       "url": "https://personal-site-zeta-silk.vercel.app/",
       "sameAs": [
         "https://www.linkedin.com/in/mmela-dyantyi-849aa52a3/",
         "https://github.com/MmelIGaba"
       ],
-      "jobTitle": "Software Developer"
+      "jobTitle": "Freelance Fullstack Developer",
+      "description": "Freelance Fullstack Developer South Africa specializing in web & mobile apps, AI integration, MS Power Platform automation, software redesign, and digital marketing for businesses and startups.",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Johannesburg",
+        "addressRegion": "GP",
+        "addressCountry": "ZA"
+      },
+      "knowsAbout": [
+        "Web App Development",
+        "Mobile App Development",
+        "AI Integration",
+        "Microsoft Power Platform",
+        "Software Redesign",
+        "Digital Marketing",
+        "Business Transformation",
+        "Tech Innovation"
+      ]
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "MSGWebWorks",
+      "url": "https://personal-site-zeta-silk.vercel.app/",
+      "description": "Freelance Fullstack Developer South Africa providing web & mobile apps, AI integration, MS Power Platform automation, software redesign, and digital marketing services.",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Johannesburg",
+        "addressRegion": "GP",
+        "addressCountry": "ZA"
+      },
+      "telephone": "+27-XXXXXXXXX",
+      "email": "msgwebworks@gmail.com",
+      "founder": {
+        "@type": "Person",
+        "name": "Mmeli Gabriel Dyantyi"
+      },
+      "serviceType": [
+        "Web App Development",
+        "Mobile App Development",
+        "AI Integration",
+        "Microsoft Power Platform Consulting",
+        "Software Redesign",
+        "Digital Marketing Strategy"
+      ],
+      "areaServed": "ZA"
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Service",
+      "name": "Web & Mobile App Development",
+      "description": "Custom web and mobile application development services for businesses and startups in South Africa.",
+      "provider": {
+        "@type": "Person",
+        "name": "Mmeli Gabriel Dyantyi"
+      },
+      "areaServed": "ZA",
+      "serviceType": "Software Development"
     }
     </script>
   </head>
